@@ -1,8 +1,6 @@
 ## Collision [![Build Status](https://travis-ci.org/comodal/collision.svg?branch=master)](https://travis-ci.org/comodal/collision) [ ![Download](https://api.bintray.com/packages/comodal/libraries/collision/images/download.svg) ](https://bintray.com/comodal/libraries/collision/_latestVersion) [![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](LICENSE)
 > Java 9 Fixed-Capacity Loading Cache
 
-*Build Note:* [Gradle is currently broken for Java 9 past build 143](https://github.com/gradle/gradle/issues/1095). TravisCI builds will be broken until Gradle fixes their [Java 9 issues](https://github.com/gradle/gradle/issues?utf8=%E2%9C%93&q=is%3Aissue%20is%3Aopen%20Java%209) :/ Developing locally with JDK 9-ea build 143 works fine.
-
 ```java
 CollisionCache<Key, Value> cache = CollisionCache
   .<Value>withCapacity(1_048_576)
@@ -11,6 +9,11 @@ CollisionCache<Key, Value> cache = CollisionCache
     (guid, loaded) -> deserialize(loaded))
   .setIsValForKey((guid, val) -> guid.equals(val.getGUID()))
   .buildSparse();
+```
+
+### Gradle Java 9 Build Workaround
+```sh
+export JAVA_OPTS="--add-opens=java.base/java.lang=ALL-UNNAMED"
 ```
 
 ### Design Features
